# workforce-optimization

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: architecture.md
scripts/: solve_toy.py
src/workforce_opt/: __init__.py  toy_model.py
src/workforce_optimization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_toy_model.py
